--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -14,6 +14,16 @@
       },
       {
         "src": "./assets/img/favicon-dark-mode.svg",
+        "sizes": "192x192",
+        "type": "image/svg+xml"
+      },
+      {
+        "src": "./assets/img/favicon-light-mode.svg",
+        "sizes": "512x512",
+        "type": "image/svg+xml"
+      },
+      {
+        "src": "./assets/img/favicon-dark-mode.svg",
         "sizes": "512x512",
         "type": "image/svg+xml"
       }
